# value

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  appveyor.yml
.circleci/: config.yml
sources/: CMakeLists.txt
sources/include/value/: value.h
tests/: CMakeLists.txt
tests/src/: main_tests.cpp  value_tests.cpp
